bootstraptest/test_yjit.rb
@@ -5013,3 +5013,37 @@ assert_normal_exit %q{
     test_body(array)
   end
 }
+
+# compiling code shouldn't emit warnings as it may call into more Ruby code
+assert_normal_exit %q{
+  # [Bug #20522]
+  Warning[:performance] = true
+
+  module StrictWarnings
+    def warn(msg, category: nil, **)
+      raise msg
+    end
+  end
+  Warning.singleton_class.prepend(StrictWarnings)
+
+  class A
+    def compiled_method(is_private)
+      @some_ivar = is_private
+    end
+  end
+
+  100.times do |i|
+    klass = Class.new(A)
+    7.times do |j|
+      obj = klass.new
+      obj.instance_variable_set("@base_#{i}", 42)
+      obj.instance_variable_set("@ivar_#{j}", 42)
+    end
+    obj = klass.new
+    obj.instance_variable_set("@base_#{i}", 42)
+    begin
+      obj.compiled_method(true)
+    rescue
+    end
+  end
+}
